--- a/templates/travis.template
+++ b/templates/travis.template
@@ -6,22 +6,13 @@ services: docker
 env:
 %%VERSIONS%%
 
-branches:
-  only:
-    - "master"
-
-before_install:
-    - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-    - sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
-    - sudo apt-get update
-    - sudo apt-get -y install docker-ce
 
 before_script:
-  - env | sort
-  - image="ffmpeg:${VERSION}-${VARIANT:-ubuntu}"
+  - docker version
+  - image="ffmpeg:${VERSION}"
 
 script:
-  - docker build -t "${image}" --build-arg MAKEFLAGS="-j$(($(grep -c ^processor /proc/cpuinfo) + 1))" docker-images/${VERSION}/${VARIANT}
+  - docker build -t "${image}" --build-arg MAKEFLAGS="-j$(($(grep -c ^processor /proc/cpuinfo) + 1))" docker-images/${VERSION}/
   - docker run --rm ${image} -buildconf
 
 after_script:
