after update.py

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_script:
 
 script:
   - docker build -t "${image}" --build-arg MAKEFLAGS="-j$(($(grep -c ^processor /proc/cpuinfo) + 1))" docker-images/${VERSION}/
-  - docker run --rm ${image} -buildconf
+  - docker run --rm ${image} ffmpeg -buildconf
 
 after_script:
   - docker images
