--- a/templates/Dockerfile-template.ubuntu
+++ b/templates/Dockerfile-template.ubuntu
@@ -9,12 +9,6 @@ FROM        ubuntu:18.04 AS base
 
 WORKDIR     /tmp/workdir
 
-RUN     apt-get -yqq update && \
-        apt-get install -yq --no-install-recommends ca-certificates expat libgomp1 && \
-        apt-get autoremove -y && \
-        apt-get clean -y
-
-FROM base as build
 
 ARG        PKG_CONFIG_PATH=/opt/ffmpeg/lib/pkgconfig
 ARG        LD_LIBRARY_PATH=/opt/ffmpeg/lib
@@ -25,14 +19,17 @@ ENV         %%ENV%%
 
 RUN      buildDeps="autoconf \
                     automake \
+                    ca-certificates \
                     cmake \
                     curl \
                     bzip2 \
+                    expat \
                     libexpat1-dev \
                     g++ \
                     gcc \
                     git \
                     gperf \
+                    libgomp1 \
                     libtool \
                     make \
                     nasm \
@@ -49,5 +46,4 @@ RUN      buildDeps="autoconf \
 RUN \
         ldd ${PREFIX}/bin/ffmpeg | grep opt/ffmpeg | cut -d ' ' -f 3 | xargs -i cp {} /usr/local/lib/ && \
         cp ${PREFIX}/bin/* /usr/local/bin/ && \
-        cp -r ${PREFIX}/share/ffmpeg /usr/local/share/ && \
-        LD_LIBRARY_PATH=/usr/local/lib ffmpeg -buildconf
+        cp -r ${PREFIX}/share/ffmpeg /usr/local/share/
