fixing  `No package 'freetype2' found`
```2018-11-25T21:08:28.4768635Z Consider adjusting the PKG_CONFIG_PATH environment variable if you
2018-11-25T21:08:28.4768966Z installed software in a non-standard prefix.```

--- a/templates/Dockerfile-template.ubuntu
+++ b/templates/Dockerfile-template.ubuntu
@@ -9,6 +9,7 @@ FROM        ubuntu:18.04 AS base
 
 WORKDIR     /tmp/workdir
 
+ARG        PKG_CONFIG_PATH=/opt/ffmpeg/lib/pkgconfig
 ARG        PREFIX=/opt/ffmpeg
 ARG        MAKEFLAGS="-j2"
 
