--- a/docker-images/3.2/Dockerfile
+++ b/docker-images/3.2/Dockerfile
@@ -13,7 +13,7 @@ ARG        PKG_CONFIG_PATH=/opt/ffmpeg/lib/pkgconfig
 ARG        PREFIX=/opt/ffmpeg
 ARG        MAKEFLAGS="-j2"
 
-ENV         FFMPEG_VERSION=3.2.12     \
+ENV         FFMPEG_VERSION=3.2.13     \
             FDKAAC_VERSION=0.1.5      \
             LAME_VERSION=3.99.5       \
             LIBASS_VERSION=0.13.7     \
@@ -372,6 +372,7 @@ RUN \
 
 ## cleanup
 RUN \
-        ldd ${PREFIX}/bin/ffmpeg | grep opt/ffmpeg | cut -d ' ' -f 3 | xargs -i cp {} /usr/local/lib/ && \
-        cp ${PREFIX}/bin/* /usr/local/bin/ && \
-        cp -r ${PREFIX}/share/ffmpeg /usr/local/share/
+    for dir in ${PREFIX}/*; do \
+        mv ${dir}/* /usr/local/$(basename $dir) ;\
+    done && \
+    ldconfig
